# sensor-grpc-adapter

./: Cargo.toml  README.md  build.rs
proto/: sensor-adapter-grpc.proto
src/: lib.rs
