[package]
name = "sensor-grpc-adapter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.6.2"
tokio = { version = "1.17.0", features = ["full"] }
prost = "0.9"
serde = "1.0.136"
serde_derive = "1.0.136"

[build-dependencies]
tonic-build = "0.6.2"